# tsforecasting

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/examples/: ett_small_intervals.yaml  ett_small_intervals_mixed.yaml  ett_small_ml.yaml  ett_small_neural.yaml  ett_small_stats.yaml  tourism_small_hierarchical.yaml
configs/examples/ett_small/: intervals.yaml  intervals_mixed.yaml  ml.yaml  neural.yaml  stats.yaml
configs/examples/tourism_small/: hierarchical.yaml
docs/: LOG.md  PLAN.md  model_catalog.md  unified-ts-framework-plan-v1.md  unified-ts-framework-plan-v2.md  unified-ts-framework-plan-v3.md  unified-ts-framework-plan.md
scripts/: script_config_map.yaml
scripts/ett_small/: run_intervals.sh  run_intervals_mixed.sh  run_ml.sh  run_neural.sh  run_stats.sh
src/tsforecasting/: __init__.py  main.py  main_cli.py  reconciliation.py  reporting.py
src/tsforecasting/artifacts/: __init__.py  schema.py  writer.py
src/tsforecasting/cli/: __init__.py  forecast.py  hierarchical.py  main.py  parser.py  report.py  validate.py
src/tsforecasting/config/: __init__.py  common.py  forecast.py  hierarchical.py  schema.py
src/tsforecasting/data/: __init__.py  hierarchical.py
tests/integration/: test_reconcile_smoke.py  test_run_smoke.py
tests/unit/: test_catalog.py  test_config.py  test_data_loader.py  test_evaluation.py  test_hierarchical.py  test_import_safety.py  test_logging.py  test_ml_backend.py  test_neural_backend.py  test_registry.py  test_reporting.py  test_scripts.py  test_stats_backend.py
utils/: log_util.py
(+43 files in other folders)
