[project]
name = "tsforecasting"
version = "0.1.0"
description = "Unified time-series forecasting framework built on the Nixtla stack."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "statsforecast",
    "utilsforecast",
    "pyyaml",
    "numpy>=1.26,<2.5",
    "pandas>=2.2,<3",
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
ml = ["mlforecast", "scikit-learn"]
neural = ["neuralforecast"]
hierarchical = ["hierarchicalforecast", "datasetsforecast"]
plot = ["matplotlib"]
report = ["nbformat", "nbconvert", "ipykernel"]

[project.scripts]
tsforecasting = "tsforecasting.cli:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsforecasting"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
